Add a TODO comment in contact-us.html

--- a/Exercise1/contact-us.html
+++ b/Exercise1/contact-us.html
@@ -10,6 +10,7 @@
     </head>
 
     <main>
+        <!--TODO: Add validations for the form-->
         <form>
             <fieldset>
                 <legend>Personal Info</legend>
