Add info about members

--- a/Exercise1/about-us.html
+++ b/Exercise1/about-us.html
@@ -25,7 +25,7 @@
         <div class="members">
             <img src="images/prof.jpg" alt="Dimitris" width="250" height="200">
             <h3>Dimitris Evangelou</h3>
-            <p class="cvs" > Dimitris attends Athens University of Economics and Buisness
+            <p class="cvs" > Dimitris attends Athens University of Economics and Business
                 as a college student , while working as a Technical Consultant. 
             </p>
             <p>p3180053@auebmail.gr</p>
@@ -35,8 +35,11 @@
         <div class="column">
             <img src="images/prof.jpg" alt="Thanos" width="250" height="200">
             <h3>Thanos Kouros</h3>
-            <p>'Simple cvs'.</p>
-            <p>thanoskouros99@gmail.com</p>
+            <p>Thanos is an undergraduate student of the Computer Science department of Athens University of
+                Economics and Business. He is iterested in the fields of software engineering and machine
+                learning and he is currently working as a Java Software Engineer.
+            </p>
+            <p>p3170078@aueb.gr</p>
         </div>
       
        
