--- a/Exercise1/about-us.html
+++ b/Exercise1/about-us.html
@@ -26,7 +26,7 @@
             <img src="images/prof.jpg" alt="Dimitris" width="250" height="200">
             <h3>Dimitris Evangelou</h3>
             <p class="cvs" > Dimitris attends Athens University of Economics and Business
-                as a college student , while working as a Technical Consultant. 
+                as a college student of the Computer Science department , while working as a Technical Consultant. 
             </p>
             <p>p3180053@auebmail.gr</p>
         </div>
