Add textarea to contact-us.html to  describe customer's issue

--- a/Exercise1/contact-us.html
+++ b/Exercise1/contact-us.html
@@ -92,6 +92,10 @@
                         <label for="file_of_purchase">Date of Purchase: </label>
                         <input type="file" id="file_of_purchase" name="product_receipt" required>
                     </li>
+                    <li>
+                        <label for="txt_issue">Describe the issue: </label>
+                        <textarea rows="5" cols="30" id="txt_issue" name="issue" required></textarea>
+                    </li>
                 </ul>
             </fieldset>
             <input type="reset" id="contact_reset" name="reset">
