--- a/Exercise1/earbuds.html
+++ b/Exercise1/earbuds.html
@@ -13,9 +13,11 @@
         <ul style="list-style-type:none">
             <li>
                 <h2>Samsung Galaxy Buds Pro</h2>
+                <a href="galaxy-buds-pro.html">
                 <img src="images/galaxy pro.jpeg" alt="Galaxy Buds Pro" width="200" height="200">
+                </a>    
                 <p>371899</p>
-                <p>Review:3.8/5</p>
+                <p>Review:4.2/5</p>
                 <p>Price: €119.00</b></p>
                 <p>The Samsung Galaxy Buds Pro offers very good audio output.
                    There's a notable boost in bass range sound, and a spike in 
@@ -29,7 +31,7 @@
                 <h2>Apple AirPods Pro (2nd generation)</h2>
                 <img src="images/AirPods.png" alt="AirPods Pro2" width="200" height="200">
                 <p>90857</p>
-                <p>Review:4.2/5</p>
+                <p>Review:3.8/5</p>
                 <p>Price: <s>€299.00</s> <b>€249.00</b></p>
                 <p>The second-generation AirPods Pro are Apple's best earbuds yet. 
                    They sound better, have more effective noise cancelling, last longer 
