Add more products at smartphons.html and add a link to product-categories.html to index.html

--- a/Exercise1/smartphones.html
+++ b/Exercise1/smartphones.html
@@ -15,11 +15,22 @@
                 <h2>Samsung Galaxy S22 Ultra 128 GB</h2>
                 <img src="images/s22_ultra.jpeg" alt="S22 Ultra" width="200" height="200">
                 <p>256458</p>
-                <p>Review:4.8/5</p>
+                <p>Review:4.4/5</p>
                 <p>Price: <s>€1,299.00</s> <b>€1,199.00</b></p>
                 <p>Own the new Galaxy S22 with a 108MP high-resolution camera 
                     for unique photos. The fastest processor in Samsung Galaxy 
                     & fast charging for all-day battery.</p>
+                <a href="prod-s22-ultra.html">More details</a>
+            </li>
+
+            <li>
+                <h2>Samsung Galaxy Z Fold 4 256 GB</h2>
+                <img src="images/z-fold-4.jpeg" alt="Z Fold 4" width="200" height="200">
+                <p>256458</p>
+                <p>Review:4.9/5</p>
+                <p>Price: <s>€1,899.00</s> <b>€1,749.00</b></p>
+                <p>Meet the new Galaxy Z Fold4, the tough foldable that brings PC-like 
+                    power to your pocket. Unfold your world with an immersive display and Nightography.</p>
                 <a href="prod-s22-ultra.html">More details</a>
             </li>
 
