--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -19,6 +19,8 @@
             </p>
             </header>
 
+            <p><a href="product-categories.html">Products</a></p>
+
             <footer>
                 <p><a href="about-us.html">About us</a></p>
                 <p><a href="contact-us.html">Contact us</a></p>
