Add s22-ultra.html and update smartphones.html

--- a/Exercise1/smartphones.html
+++ b/Exercise1/smartphones.html
@@ -13,25 +13,40 @@
         <ul style="list-style-type:none">
             <li>
                 <h2>Samsung Galaxy S22 Ultra 128 GB</h2>
+                <a href="s22-ultra.html">
                 <img src="images/s22_ultra.jpeg" alt="S22 Ultra" width="200" height="200">
+                </a>
                 <p>256458</p>
                 <p>Review:4.4/5</p>
                 <p>Price: <s>€1,299.00</s> <b>€1,199.00</b></p>
                 <p>Own the new Galaxy S22 with a 108MP high-resolution camera 
                     for unique photos. The fastest processor in Samsung Galaxy 
                     & fast charging for all-day battery.</p>
-                <a href="prod-s22-ultra.html">More details</a>
+                <a href="s22-ultra.html">More details</a>
             </li>
 
             <li>
-                <h2>Samsung Galaxy Z Fold 4 256 GB</h2>
+                <h2>Samsung Galaxy Z Fold4 256 GB</h2>
                 <img src="images/z-fold-4.jpeg" alt="Z Fold 4" width="200" height="200">
                 <p>256458</p>
                 <p>Review:4.9/5</p>
                 <p>Price: <s>€1,899.00</s> <b>€1,749.00</b></p>
                 <p>Meet the new Galaxy Z Fold4, the tough foldable that brings PC-like 
                     power to your pocket. Unfold your world with an immersive display and Nightography.</p>
-                <a href="prod-s22-ultra.html">More details</a>
+                <a href="prod-fold4.html">More details</a>
+            </li>
+
+            <li>
+                <h2>Samsung Galaxy Z Flip4 128 GB</h2>
+                <img src="images/flip4.png" alt="Z Flip 4" width="200" height="200">
+                <p>298742</p>
+                <p>Review:4.4/5</p>
+                <p>Price: <s>€1,149.00</s> <b>€1,049.00</b></p>
+                <p>The Samsung Galaxy Z Flip4 is the ultimate tool for next-level expression. 
+                    Enjoy compact portability that opens up to a large 6.7” Infinity Flex display 
+                    with 120 HZ refresh rate. Read notifications, respond to texts, skip songs, and 
+                    change settings on the customizable cover screen without unfolding your phone.</p>
+                <a href="prod-flip4.html">More details</a>
             </li>
 
             <li>
