Add home button to webpages. Update smartphones.html and add more content

--- a/Exercise1/contact-us.html
+++ b/Exercise1/contact-us.html
@@ -10,6 +10,7 @@
     </head>
 
     <main>
+        <p><a href="index.html">Home</a></p>
         <header>
                 <h1>Contuct us!</h1>
             <p>For technical support or any issue, please fill and submit the form below and our customer 
