--- a/Exercise1/earbuds.html
+++ b/Exercise1/earbuds.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <p><a href="index.html">Home</a></p>
         <ul style="list-style-type:none">
             <li>
                 <h2>Samsung Galaxy Buds Pro</h2>
