--- a/Exercise1/product-categories.html
+++ b/Exercise1/product-categories.html
@@ -8,6 +8,7 @@
     </head>
 
     <body>
+        <p><a href="index.html">Home</a></p>
         <div class="Smartphones and Tablets">
             <h2>Smartphones and Tablets</h2>
             <img src="images/smartphones.png" alt="Smartphones and Tablets" width="150" height="100">
