--- a/Exercise1/smartphones.html
+++ b/Exercise1/smartphones.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <p><a href="index.html">Home</a></p>
         <ul style="list-style-type:none">
             <li>
                 <h2>Samsung Galaxy S22 Ultra 128 GB</h2>
@@ -17,7 +18,7 @@
                 <img src="images/s22_ultra.jpeg" alt="S22 Ultra" width="200" height="200">
                 </a>
                 <p>256458</p>
-                <p>Review:4.4/5</p>
+                <p>Review:4.6/5</p>
                 <p>Price: <s>€1,299.00</s> <b>€1,199.00</b></p>
                 <p>Own the new Galaxy S22 with a 108MP high-resolution camera 
                     for unique photos. The fastest processor in Samsung Galaxy 
