--- a/Exercise1/about-us.html
+++ b/Exercise1/about-us.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-     
+        <p><a href="index.html">Home</a></p>
         <div class="about-us">
             <h1>About Us</h1>
             <p>Founded in 'DATE' and based in 'LOCATION'. 'SITE NAME' is a site to make your
