--- a/Exercise1/galaxy-buds-pro.html
+++ b/Exercise1/galaxy-buds-pro.html
@@ -10,6 +10,7 @@
     </head>
 
     <body>
+        <p><a href="index.html">Home</a></p>
         <h1>Samsung Galaxy Buds Pro</h1>
         <img src="images/galaxy pro.jpeg" alt="Galaxy Buds Pro" width="400" height="400">
         <h2>Price: €119.00</h2>
