Make some changes after validation from markup validation service

--- a/Exercise1/smartphones.html
+++ b/Exercise1/smartphones.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Smartphones</title>
 
@@ -55,7 +55,7 @@
                 <img src="images/14_pro.jpeg" alt="iPhone 14 Pro" width="200" height="200">
                 <p>598741</p>
                 <p>Review:4.9/5</p>
-                <p>Price: €1,399.00</b></p>
+                <p><b>Price: €1,399.00</b></p>
                 <p>A magical way to interact with your iPhone. An innovative safety feature 
                     designed to save lives. An innovative 48 MP main camera. And a screen up to 
                     2 times brighter in the sun. All backed by the ultimate chip in a smartphone.</p>
@@ -67,7 +67,7 @@
                 <img src="images/xiaomi_12_pro.jpeg" alt="xiaomi 12 Pro" width="200" height="200">
                 <p>178945</p>
                 <p>Review:4.5/5</p>
-                <p>Price: €1,099.00</b></p>
+                <p><b>Price: €1,099.00</b></p>
                 <p>Evolving from our constant pursuit of excellence in creating what you are longing for, 
                     Xiaomi 12 Pro is now ready to master every scene with a pro-grade 50MP triple camera 
                     array, WQHD+ dynamic 120Hz display, the most advanced Snapdragon® 8 Gen 1 chipset yet, 
