Make some changes after validation from markup validation service

--- a/Exercise1/about-us.html
+++ b/Exercise1/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>TechStuff</title>
 
@@ -32,7 +32,7 @@
                 <ul>
                     <li>
                         <img src="images/mail_logo.png" alt="Mail Logo" width="20" height="20">
-                        <a href="mailto: p3180053@aueb.gr"> p3180053@aueb.gr</a>
+                        <a href="mailto:p3180053@aueb.gr"> p3180053@aueb.gr</a>
                     </li>
                     <li>
                         <img src="images/GitHub-Mark.png" alt="GitHub Logo" width="20" height="20">
@@ -52,7 +52,7 @@
                 <ul>
                     <li>
                         <img src="images/mail_logo.png" alt="Mail Logo" width="20" height="20">
-                        <a href="mailto: p3170078@aueb.gr">p3170078@aueb.gr</a>
+                        <a href="mailto:p3170078@aueb.gr">p3170078@aueb.gr</a>
                     </li>
                     <li>
                         <img src="images/linkedin_logo.png" alt="LinkedIn Logo" width="20" height="20">
