--- a/Exercise1/contact-us.html
+++ b/Exercise1/contact-us.html
@@ -46,7 +46,7 @@
                 <ul>
                     <li>
                         <label for="sel_category">Product: </label>
-                        <select id="sel_category" name="product" required>
+                        <select id="sel_category" name="product">
                             <optgroup label="Smartphones and Tablets">
                                 <option value="smartphone">Smartphones</option>
                                 <option value="earbuds">Earbuds</option>
