--- a/Exercise1/earbuds.html
+++ b/Exercise1/earbuds.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Earbuds</title>
 
@@ -15,11 +15,11 @@
             <li>
                 <h2>Samsung Galaxy Buds Pro</h2>
                 <a href="galaxy-buds-pro.html">
-                <img src="images/galaxy pro.jpeg" alt="Galaxy Buds Pro" width="200" height="200">
+                <img src="images/galaxy-pro.jpeg" alt="Galaxy Buds Pro" width="200" height="200">
                 </a>    
                 <p>371899</p>
                 <p>Review:4.2/5</p>
-                <p>Price: €119.00</b></p>
+                <p><b>Price: €119.00</b></p>
                 <p>The Samsung Galaxy Buds Pro offers very good audio output.
                    There's a notable boost in bass range sound, and a spike in 
                    the very high range, but otherwise everything should sound pretty 
@@ -46,7 +46,7 @@
                 <img src="images/xiaomi_buds.jpeg" alt="Xiaomi Earbuds 3 Pro" width="200" height="200">
                 <p>200837</p>
                 <p>Review:4.7/5</p>
-                <p>Price: €45.00</b></p>
+                <p><b> €45.00</b></p>
                 <p>The Redmi Buds 3 Pro get the basics right and then go further by offering 
                    wireless charging, ear-detection and fast charging. These earphones deliver 
                    high-quality audio with sound that's well represented on the entire frequency range, 
