--- a/Exercise1/product-categories.html
+++ b/Exercise1/product-categories.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <title>Product-Categories</title>
+
         <meta charset="UTF-8">
         <meta name="description" content="Technological products">
         <meta name="author" content="Thanas Kouro,Dimitris Evangelou">
@@ -12,10 +14,10 @@
         <div class="Smartphones and Tablets">
             <h2>Smartphones and Tablets</h2>
             <img src="images/smartphones.png" alt="Smartphones and Tablets" width="150" height="100">
-            <nav id="Smartphones and Tablets">
+            <nav id="Smartphones-Tablets">
                 <ul>
-                    <a href="smartphones.html"><li>Smartphones</li></a>
-                    <a href="earbuds.html"><li>Earbuds</li></a>
+                    <li><a href="smartphones.html">Smartphones</a></li>
+                    <li><a href="earbuds.html">Earbuds</a></li>
                     <li>Peripherals</li>
                     <li>Tablets</li>
                 </ul>
@@ -25,7 +27,7 @@
         <div class="PCs and Peripherals">
             <h2>PCs and Peripherals</h2>
             <img src="images/pc.png" alt="PCs and Peripherals" width="150" height="100">
-            <nav id="PCs and Peripherals">
+            <nav id="PCs-Peripherals">
                 <ul>
                     <li>PCs</li>
                     <li>Laptops</li>
@@ -61,7 +63,7 @@
         <div class="Home Devices">
             <h2>Home Devices</h2>
             <img src="images/home.png" alt="Home Devices" width="150" height="100">
-            <nav id="Home Devices">
+            <nav id="Home-Devices">
                 <ul>
                     <li>Air Conditions</li>
                     <li>Fridges</li>
