--- a/Exercise1/s22-ultra.html
+++ b/Exercise1/s22-ultra.html
@@ -22,7 +22,7 @@
             for unique photos. The fastest processor in Samsung Galaxy 
             & fast charging for all-day battery. </p>
 
-        <iframe width="500" height="300" src="https://www.youtube.com/embed/2Jdpwb_0F5w?start=2" title="YouTube video player" frameborder="0" 
+        <iframe width="500" height="300" src="https://www.youtube.com/embed/2Jdpwb_0F5w?start=2" title="YouTube video player" 
          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
 
