--- a/Exercise2/Exercise1/about-us.html
+++ b/Exercise2/Exercise1/about-us.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Information about us.">
         <meta name="author" content="Dimitris Evangelou">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="./css/style.css"> 
+        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
     </head>
 
     <body>
