--- a/Exercise2/Exercise1/contact-us.html
+++ b/Exercise2/Exercise1/contact-us.html
@@ -1,106 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Contact</title>
+        <title>Smartphones</title>
 
         <meta charset="UTF-8">
-        <meta name="description" content="Contact us for any issues.">
+        <meta name="description" content="Technological products">
         <meta name="author" content="Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
     </head>
 
-    <main>
+    <body>
         <p><a href="index.html">Home</a></p>
         <header>
-                <h1>Contuct us!</h1>
-            <p>For technical support or any issue, please fill and submit the form below and our customer 
-                service will contact you as soon as possible!
-            </p>
+            <h1>Smartphones</h1>
         </header>
-        <form>
-            <fieldset>
-                <legend>Personal Info</legend>
-                <ul>
-                    <li>
-                        <label for="txt_first_name">First Name: </label>
-                        <input type="text" id="txt_first_name" name="first_name" autocomplete="name" required>        
-                    </li>
-                    <li>
-                        <label for="txt_last_name">Last Name: </label>
-                        <input type="text" id="txt_last_name" name="last_name" autocomplete="family-name" required>
-                    </li>
-                    <li>
-                        <label for="txt_email">Email: </label>
-                        <input type="email" id="txt_email" name="email" autocomplete="email" required>
-                    </li>
-                    <li>
-                        <label for="txt_telephone">Phone Number: </label>
-                        <input type="tel" id="txt_telephone" name="telephone" autocomplete="tel" 
-                        pattern="[0-9]{10}" required>
-                    </li>
-                </ul>
-            </fieldset>
+        <ul style="list-style-type:none">
+            <li>
+                <h2>Samsung Galaxy S22 Ultra 128 GB</h2>
+                <a href="s22-ultra.html">
+                <img src="images/s22_ultra.jpeg" alt="S22 Ultra" width="200" height="200">
+                </a>
+                <p>256458</p>
+                <p>Review:4.6/5</p>
+                <p>Price: <s>€1,299.00</s> <b>€1,199.00</b></p>
+                <p>Own the new Galaxy S22 with a 108MP high-resolution camera 
+                    for unique photos. The fastest processor in Samsung Galaxy 
+                    & fast charging for all-day battery.</p>
+                <a href="s22-ultra.html">More details</a>
+            </li>
 
-            <fieldset>
-                <legend>Purchase Info</legend>
-                <ul>
-                    <li>
-                        <label for="sel_category">Product: </label>
-                        <select id="sel_category" name="product">
-                            <optgroup label="Smartphones and Tablets">
-                                <option value="smartphone">Smartphones</option>
-                                <option value="earbuds">Earbuds</option>
-                                <option value="peripherals">Peripherals</option>
-                                <option value="tablets">Tablets</option>
-                            </optgroup>
+            <li>
+                <h2>Samsung Galaxy Z Fold4 256 GB</h2>
+                <img src="images/z-fold-4.jpeg" alt="Z Fold 4" width="200" height="200">
+                <p>256458</p>
+                <p>Review:4.9/5</p>
+                <p>Price: <s>€1,899.00</s> <b>€1,749.00</b></p>
+                <p>Meet the new Galaxy Z Fold4, the tough foldable that brings PC-like 
+                    power to your pocket. Unfold your world with an immersive display and Nightography.</p>
+                <a href="prod-fold4.html">More details</a>
+            </li>
 
-                            <optgroup label="PCs and Peripherals">
-                                <option value="pc">PCs</option>
-                                <option value="laptops">Laptops</option>
-                                <option value="peripherals">Peripherals</option>
-                            </optgroup>
+            <li>
+                <h2>Samsung Galaxy Z Flip4 128 GB</h2>
+                <img src="images/flip4.png" alt="Z Flip 4" width="200" height="200">
+                <p>298742</p>
+                <p>Review:4.4/5</p>
+                <p>Price: <s>€1,149.00</s> <b>€1,049.00</b></p>
+                <p>The Samsung Galaxy Z Flip4 is the ultimate tool for next-level expression. 
+                    Enjoy compact portability that opens up to a large 6.7” Infinity Flex display 
+                    with 120 HZ refresh rate. Read notifications, respond to texts, skip songs, and 
+                    change settings on the customizable cover screen without unfolding your phone.</p>
+                <a href="prod-flip4.html">More details</a>
+            </li>
 
-                            <optgroup label="Imaging">
-                                <option value="pc">PCs</option>
-                                <option value="laptops">Laptops</option>
-                                <option value="peripherals">Peripherals</option>
-                            </optgroup>
+            <li>
+                <h2>Apple iPhone 14 Pro 128 GB</h2>
+                <img src="images/14_pro.jpeg" alt="iPhone 14 Pro" width="200" height="200">
+                <p>598741</p>
+                <p>Review:4.9/5</p>
+                <p><b>Price: €1,399.00</b></p>
+                <p>A magical way to interact with your iPhone. An innovative safety feature 
+                    designed to save lives. An innovative 48 MP main camera. And a screen up to 
+                    2 times brighter in the sun. All backed by the ultimate chip in a smartphone.</p>
+                <a href="prod-14-pro.html">More details</a>
+            </li>
 
-                            <optgroup label="TVs">
-                                <option value="tvs">TVs</option>
-                                <option value="soundbars">Soundbars</option>
-                                <option value="peripherals">Peripherals</option>
-                            </optgroup>
+            <li>
+                <h2>Xiaomi 12 Pro 128 GB</h2>
+                <img src="images/xiaomi_12_pro.jpeg" alt="xiaomi 12 Pro" width="200" height="200">
+                <p>178945</p>
+                <p>Review:4.5/5</p>
+                <p><b>Price: €1,099.00</b></p>
+                <p>Evolving from our constant pursuit of excellence in creating what you are longing for, 
+                    Xiaomi 12 Pro is now ready to master every scene with a pro-grade 50MP triple camera 
+                    array, WQHD+ dynamic 120Hz display, the most advanced Snapdragon® 8 Gen 1 chipset yet, 
+                    and intelligent 120W Xiaomi HyperCharge.</p>
+                <a href="xiaomi-12-pro.html">More details</a>
+            </li>
 
-                            <optgroup label="Home Devices">
-                                <option value="air_con">Air Conditions</option>
-                                <option value="fridges">Fridges</option>
-                                <option value="cookers">Cookers</option>
-                            </optgroup>
-                        </select>
-                    </li>
-                        
-                    <li>
-                        <label for="txt_product_id">Product Code: </label>
-                        <input type="text" id="txt_product_id" name="product_id" required>
-                    </li>
-                    <li>
-                        <label for="date_of_purchase">Date of Purchase: </label>
-                        <input type="date" id="date_of_purchase" name="purchase_date" 
-                        max="2022-10-31" required>
-                    </li>
-                    <li>
-                        <label for="file_of_purchase">Date of Purchase: </label>
-                        <input type="file" id="file_of_purchase" name="product_receipt" required>
-                    </li>
-                    <li>
-                        <label for="txt_issue">Describe the issue: </label>
-                        <textarea rows="5" cols="30" id="txt_issue" name="issue" required></textarea>
-                    </li>
-                </ul>
-            </fieldset>
-            <input type="reset" id="contact_reset" name="reset">
-            <input type="submit" id="contact_submit" name="submit">
-        </form>
-    </main>
+        </ul>
+    </body>
 </html>
