--- a/Exercise2/Exercise1/earbuds.html
+++ b/Exercise2/Exercise1/earbuds.html
@@ -7,10 +7,14 @@
         <meta name="description" content="Technological products">
         <meta name="author" content="Dimitris Evangelou">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
     </head>
 
     <body>
         <p><a href="index.html">Home</a></p>
+        <header>
+            <h1>Earbuds</h1>
+          </header>
         <ul style="list-style-type:none">
             <li>
                 <h2>Samsung Galaxy Buds Pro</h2>
