--- a/Exercise2/Exercise1/index.html
+++ b/Exercise2/Exercise1/index.html
@@ -7,17 +7,19 @@
         <meta name="description" content="Technological products">
         <meta name="author" content="Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
     </head>
 
     <body>
+   
         <main>
             <header>
                 <h1>Welcome to TechStuff!</h1>
+            </header>
             <p>Welcome to our new website. Here, you can find the newest technological products and home devices
                 at the best prices on the market! You can choose from a variety of Smartphones and Tablets, PCs 
                 or Laptops, TVs, Home Devices and more..!
             </p>
-            </header>
 
             <p><a href="product-categories.html">Products</a></p>
 
@@ -25,6 +27,8 @@
                 <p><a href="about-us.html">About us</a></p>
                 <p><a href="contact-us.html">Contact us</a></p>
             </footer>
+            
         </main>
+   
     </body>
 </html>
