--- a/Exercise2/Exercise1/product-categories.html
+++ b/Exercise2/Exercise1/product-categories.html
@@ -7,10 +7,15 @@
         <meta name="description" content="Technological products">
         <meta name="author" content="Thanas Kouro,Dimitris Evangelou">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
     </head>
 
     <body>
+
         <p><a href="index.html">Home</a></p>
+        <header>
+            <h1>Products</h1>
+    </header>
         <div class="Smartphones and Tablets">
             <h2>Smartphones and Tablets</h2>
             <img src="images/smartphones.png" alt="Smartphones and Tablets" width="150" height="100">
