--- a/Exercise2/Exercise1/s22-ultra.html
+++ b/Exercise2/Exercise1/s22-ultra.html
@@ -7,11 +7,14 @@
         <meta name="description" content="Technological products">
         <meta name="author" content="Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/style.css"> 
     </head>
 
     <body>
         <p><a href="index.html">Home</a></p>
-        <h1>Samsung Galaxy S22 Ultra 128 GB</h1>
+        <header>
+            <h1>Samsung Galaxy S22 Ultra 128 GB</h1>
+        </header>       
         <img src="images/s22_ultra.jpeg" alt="S22 Ultra" width="400" height="400">
         <h2>Price: <s>€1,299.00</s> <b>€1,199.00</b></h2>
         <h3>Product Code: 256458</h3>
@@ -195,22 +198,22 @@
         
         <section>
             <h3 id="reviews">Reviews</h3>
-            <p>Total Rating: 4.6/5</p>
+            <ph>Total Rating: 4.6/5</ph>
             <ul>
                 <li>
                     <h3>I love my Samsung Galaxy S22 Ultra</h3>
-                    <p>Rating: 5/5</p>
-                    <p>TI know that it's a lot of money, but I don't upgrade every time a new phone comes out. 
+                    <ph>Rating: 5/5</ph>
+                    <pr>TI know that it's a lot of money, but I don't upgrade every time a new phone comes out. 
                         I'm really sad that there is no slot for an SD card because I take thousands of photos. 
                         So far everything is going well. Ilike the pen, it's the first time I have had one on my phone. 
                         The camera is nice, it has some really great editing features like shadow and glare removal. 
                         You can even remove a person or thing in the photo if you want to! I recommend!
-                    </p>
+                    </pr>
                 </li>
                 <li>
                     <h3>Can't go wrong with this phone</h3>
-                    <p>Rating: 5/5</p>
-                    <p>
+                    <ph>Rating: 5/5</ph>
+                    <pr>
                         This phone is a powerhouse and stops at nothing. I'm a web developer and I need a snappy phone 
                         that runs the latest and greatest, as well as provides me with mobile internet access all the 
                         time, and this phone does not disappoint. The cameras are also amazing, even compared to my old s20 FE. 
@@ -221,39 +224,39 @@
                         don't use them often. The screen is also stunning even in comparison to my S20 FE, much brighter, sharper, 
                         and overall very color-accurate. Battery life is also great, and if I needed to I feel like I could get 2
                         days of power out of the battery without needing to plug in again. Hats off Samsung! Good job on this one.
-                    </p>
+                    </pr>
                 </li>
                 <li>
                     <h3>Fabulous phone</h3>
-                    <p>Rating: 5/5</p>
-                    <p>
+                    <ph>Rating: 5/5</ph>
+                    <pr>
                         Bought the Galaxy S22 Ultra as I wanted a camera with longer optical zoom for gig photos. The camera takes 
                         crisp sharp photos, colours are vibrant, portrait background blur is almost there, with some anomalies but 
                         but usually hardly noticeable. I would like bulb mode or longer than 30s max time, ie 900s for ND filters, 
                         as you can get filter holders for this and a tripod clamp, this potentially could take great long exposure 
                         shots as a much lighter kit than a DSLR. Battery normally lasting about 5 days as I am not a prolific phone 
                         user. Very impressed so far.
-                    </p>
+                    </pr>
                 </li>
                 <li>
                     <h3> Almost perfect</h3>
-                    <p>Rating: 4/5</p>
-                    <p>
+                    <ph>Rating: 4/5</ph>
+                    <pr>
                         I am an Android user from the beginning of Android phones. Everything is just a tick below perfection. To power 
                         it off you have to press 2 buttons and use 2 hands to do it. Liked my S9+ better but it lacked some neat features 
                         of this S22U. I have a S5 that I use strictly as a car phone that I still like but it just did not have enough memory. 
                         If it did I'd still be using it. Also, it seems heavy. Haven't weighed it yet But I will soon just for my own knowledge. 
                         A lot to learn about the S-pen. A lot!
-                    </p>
+                    </pr>
                 </li>
                 <li>
                     <h3>No SD card slot & no headphones slot.</h3>
-                    <p>Rating: 4/5</p>
-                    <p>
+                    <ph>Rating: 4/5</ph>
+                    <pr>
                         No removable storage & no headphones insert. Just make sure you know this. I am not happy about it but I will switching 
                         this phone to another line that doesn't require much more storage and I never use headphones but for those who do. You need 
                         an adapter for the headset. I am going to look for the another phone that allows headphones and SD card.
-                    </p>
+                    </pr>
                 </li>
             </ul>
         
