--- a/Exercise2/Exercise1/index.html
+++ b/Exercise2/Exercise1/index.html
@@ -7,6 +7,8 @@
         <meta name="description" content="Technological products">
         <meta name="author" content="Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
 
     <body>
@@ -19,7 +21,11 @@
             </p>
             </header>
 
-            <p><a href="product-categories.html">Products</a></p>
+            <ul>
+                <li><a href="product-categories.html">Products</a></li>
+                <li>Services</li>
+                <li>Contracts</li>
+            </ul>
 
             <footer>
                 <p><a href="about-us.html">About us</a></p>
