--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -19,7 +19,11 @@
             </p>
             </header>
 
-            <p><a href="product-categories.html">Products</a></p>
+            <ul>
+                <li><a href="product-categories.html">Products</a></li>
+                <li>Services</li>
+                <li>Contracts</li>
+            </ul>
 
             <footer>
                 <p><a href="about-us.html">About us</a></p>
