--- a/Exercise2/Exercise1/product-categories.html
+++ b/Exercise2/Exercise1/product-categories.html
@@ -11,27 +11,30 @@
 
     <body>
         <p><a href="index.html">Home</a></p>
-        <div class="Smartphones and Tablets">
-            <h2>Smartphones and Tablets</h2>
+        <div class="Smartphones & Tablets">
+            <h2>Smartphones & Tablets</h2>
             <img src="images/smartphones.png" alt="Smartphones and Tablets" width="150" height="100">
             <nav id="Smartphones-Tablets">
                 <ul>
                     <li><a href="smartphones.html">Smartphones</a></li>
                     <li><a href="earbuds.html">Earbuds</a></li>
-                    <li>Peripherals</li>
+                    <li>Smartwatches</li>
                     <li>Tablets</li>
+                    <li>Accessories</li>
                 </ul>
             </nav>
         </div>
 
         <div class="PCs and Peripherals">
-            <h2>PCs and Peripherals</h2>
+            <h2>PCs & Peripherals</h2>
             <img src="images/pc.png" alt="PCs and Peripherals" width="150" height="100">
             <nav id="PCs-Peripherals">
                 <ul>
                     <li>PCs</li>
                     <li>Laptops</li>
-                    <li>Peripherals</li>
+                    <li>Monitors</li>
+                    <li>Storage</li>
+                    <li>Printers</li>
                 </ul>
             </nav>
         </div>
@@ -41,21 +44,24 @@
             <img src="images/prof.jpg" alt="Imaging" width="150" height="100"> 
             <nav id="Imaging">
                 <ul>
-                    <li>PCs</li>
-                    <li>Laptops</li>
-                    <li>Peripherals</li>
+                    <li>Drones</li>
+                    <li>DSLR</li>
+                    <li>Action Cameras</li>
+                    <li>Compact</li>
+                    <li>Accessories</li>
                 </ul>
             </nav>
         </div>
 
         <div class="TVs">
-            <h2>TVs</h2>
+            <h2>Image & Sound</h2>
             <img src="images/tv.jpeg" alt="TVs" width="150" height="100">
             <nav id="TVs">
                 <ul>
                     <li>TVs</li>
                     <li>Soundbars</li>
-                    <li>Peripherals</li>
+                    <li>Decoders</li>
+                    <li>Projectors</li>
                 </ul>
             </nav>
         </div>
