change style of the website

--- a/Exercise2/Exercise1/index.html
+++ b/Exercise2/Exercise1/index.html
@@ -11,11 +11,12 @@
     </head>
 
     <body>
-   
+        
+        <header>
+            <h1><a href="index.html">TechStuff</a></h1>
+        </header>
+
         <main>
-            <header>
-                <h1>Welcome to TechStuff!</h1>
-            </header>
             <p>Welcome to our new website. Here, you can find the newest technological products and home devices
                 at the best prices on the market! You can choose from a variety of Smartphones and Tablets, PCs 
                 or Laptops, TVs, Home Devices and more..!
