--- a/Exercise2/Exercise1/product-categories.html
+++ b/Exercise2/Exercise1/product-categories.html
@@ -10,8 +10,15 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css"> 
     </head>
 
+
+
     <body>
-        <p><a href="index.html">Home</a></p>
+
+        <header>
+            <h1><a href="index.html">TechStuff</a></h1>
+        </header> 
+
+        <main>
         <div class="Smartphones & Tablets">
             <h2>Smartphones & Tablets</h2>
             <img src="images/smartphones.png" alt="Smartphones and Tablets" width="150" height="100">
@@ -78,5 +85,8 @@
                 </ul>
             </nav>
         </div>
+        </main>
+
+    
     </body>
 </html>
