Give some style to contact-us.html

--- a/Exercise2/Exercise1/contact-us.html
+++ b/Exercise2/Exercise1/contact-us.html
@@ -20,8 +20,8 @@
             <p>For technical support or any issue, please fill and submit the form below and our customer 
                 service will contact you as soon as possible!
             </p>
-            <form>
-                <fieldset>
+            <form id="contact-form">
+                <fieldset id="personal-info">
                     <legend>Personal Info</legend>
                     <ul>
                         <li>
@@ -44,7 +44,7 @@
                     </ul>
                 </fieldset>
     
-                <fieldset>
+                <fieldset id="purchase-info">
                     <legend>Purchase Info</legend>
                     <ul>
                         <li>
