--- a/Exercise2/Exercise1/index.html
+++ b/Exercise2/Exercise1/index.html
@@ -17,21 +17,19 @@
         </header>
 
         <main>
-            <p>Welcome to our new website. Here, you can find the newest technological products and home devices
+            <p class="main_index">Welcome to our new website. Here, you can find the newest technological products and home devices
                 at the best prices on the market! You can choose from a variety of Smartphones and Tablets, PCs 
                 or Laptops, TVs, Home Devices and more..!
             </p>
-
-            <ul>
-                <li><a href="product-categories.html">Products</a></li>
-                <li>Services</li>
-                <li>Contracts</li>
-            </ul>
-
-            <footer>
-                <p><a href="about-us.html">About us</a></p>
-                <p><a href="contact-us.html">Contact us</a></p>
-            </footer>
+        
+            <div class="dropdown">
+                <button class="dropbtn" ><a class = "butt_text">Menu</a></button>
+                <div class="dropdown-content">
+                  <a class = "butt_text" href="product-categories.html">Products</a>
+                  <a class = "butt_text" href="about-us.html">About us</a>
+                  <a class = "butt_text" href="contact-us.html">Contact us</a>
+                </div>
+              </div>
             
         </main>
    
