--- a/Exercise2/Exercise1/product-categories.html
+++ b/Exercise2/Exercise1/product-categories.html
@@ -8,6 +8,25 @@
         <meta name="author" content="Thanas Kouro,Dimitris Evangelou">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../css/style.css"> 
+        <style>
+            h1{
+                color: #a9ccd2;
+                font-family: "Copperplate", fantasy;
+                font-style:italic;
+                font-weight: lighter;
+                text-shadow:  -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0, 1px 1px 0 #000;
+                text-align: center;
+            }
+            li{
+                color:  #882012;
+                font-family: "Copperplate", fantasy;
+                font-style:italic;
+                font-weight: lighter;
+                text-align: center;
+                text-shadow: none;
+                font-size: x-large;
+            }
+        </style>
     </head>
 
 
@@ -19,9 +38,10 @@
         </header> 
 
         <main>
+      <div class="center">
         <div class="Smartphones & Tablets">
-            <h2>Smartphones & Tablets</h2>
-            <img src="images/smartphones.png" alt="Smartphones and Tablets" width="150" height="100">
+            <h1>Smartphones & Tablets</h1>
+            <img src="images/smartphones.png" alt="Smartphones and Tablets" width="350" height="250">
             <nav id="Smartphones-Tablets">
                 <ul>
                     <li><a href="smartphones.html">Smartphones</a></li>
@@ -34,8 +54,8 @@
         </div>
 
         <div class="PCs and Peripherals">
-            <h2>PCs & Peripherals</h2>
-            <img src="images/pc.png" alt="PCs and Peripherals" width="150" height="100">
+            <h1>PCs & Peripherals</h1>
+            <img src="images/pc.png" alt="PCs and Peripherals" width="350" height="250">
             <nav id="PCs-Peripherals">
                 <ul>
                     <li>PCs</li>
@@ -48,8 +68,8 @@
         </div>
 
         <div class="Imaging">
-            <h2>Imaging</h2>
-            <img src="images/prof.jpg" alt="Imaging" width="150" height="100"> 
+            <h1>Imaging</h1>
+            <img src="images/imaging.jpg" alt="Imaging" width="350" height="250"> 
             <nav id="Imaging">
                 <ul>
                     <li>Drones</li>
@@ -62,8 +82,8 @@
         </div>
 
         <div class="TVs">
-            <h2>Image & Sound</h2>
-            <img src="images/tv.jpeg" alt="TVs" width="150" height="100">
+            <h1>Image & Sound</h1>
+            <img src="images/tv.jpeg" alt="TVs" width="350" height="250">
             <nav id="TVs">
                 <ul>
                     <li>TVs</li>
@@ -75,8 +95,8 @@
         </div>
 
         <div class="Home Devices">
-            <h2>Home Devices</h2>
-            <img src="images/home.png" alt="Home Devices" width="150" height="100">
+            <h1>Home Devices</h1>
+            <img src="images/home.png" alt="Home Devices" width="350" height="250">
             <nav id="Home-Devices">
                 <ul>
                     <li>Air Conditions</li>
@@ -85,6 +105,7 @@
                 </ul>
             </nav>
         </div>
+     </div>
         </main>
 
     
