--- a/Exercise2/Exercise1/contact-us.html
+++ b/Exercise2/Exercise1/contact-us.html
@@ -17,11 +17,13 @@
         </header> 
 
         <main>
-            <p>For technical support or any issue, please fill and submit the form below and our customer 
-                service will contact you as soon as possible!
-            </p>
+            <div class="center">
+                <p>For technical support or any issue, please fill and submit the form below and our customer 
+                    service will contact you as soon as possible!
+                </p>
+            </div>
             <form id="contact-form">
-                <fieldset id="personal-info">
+                <fieldset id="personal-info" class="field_set">
                     <legend>Personal Info</legend>
                     <ul>
                         <li>
@@ -44,7 +46,7 @@
                     </ul>
                 </fieldset>
     
-                <fieldset id="purchase-info">
+                <fieldset id="purchase-info" class="field_set">
                     <legend>Purchase Info</legend>
                     <ul>
                         <li>
@@ -102,8 +104,8 @@
                         </li>
                     </ul>
                 </fieldset>
-                <input type="reset" id="contact_reset" name="reset">
-                <input type="submit" id="contact_submit" name="submit">
+                <input type="reset" id="contact_reset" name="reset" class="button">
+                <input type="submit" id="contact_submit" name="submit" class="button">
             </form>
         </main>
     </body>
