Change some tags after html validation service

--- a/Exercise2/Exercise1/about-us.html
+++ b/Exercise2/Exercise1/about-us.html
@@ -23,6 +23,7 @@
             </p>  
     
             <section class="bio">
+                <h2 id="about-us">About Us</h2>
                 <article id="dimitrisEvangelou" class="bio-individual">
                     <h3>Dimitris Evangelou</h3>
                     <img src="images/profile.jpg" alt="Dimitris" width="200" height="200">
