--- a/Exercise2/Exercise1/s22-ultra.html
+++ b/Exercise2/Exercise1/s22-ultra.html
@@ -99,8 +99,8 @@
             </section>
 
             <section class="specifications">
+                <h2>S22 Ultra Specifications</h2>
                 <table id="specifications">
-                    <caption>S22 Ultra Specifications</caption>
                     <tbody>
                         <tr>
                             <td class="one">Dimensions</td>
