--- a/Exercise2/Exercise1/galaxy-buds-pro.html
+++ b/Exercise2/Exercise1/galaxy-buds-pro.html
@@ -102,10 +102,8 @@
     
            
             <section class="specifications">
+                <h2> Buds Pro Specifications </h2>
                 <table id="specifications">
-                    <caption>
-                        Buds Pro Specifications 
-                    </caption>
                     <tbody>
                         <tr class="one">
                             <td>Dimensions</td>
