--- a/Exercise2/Exercise1/index.html
+++ b/Exercise2/Exercise1/index.html
@@ -8,6 +8,11 @@
         <meta name="author" content="Thanas Kouro">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../css/style.css"> 
+        <style>
+            footer{
+                margin-top: 400px;
+            }
+        </style>
     </head>
 
     <body>
